fixed overflow on homepage

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -959,21 +959,6 @@ Red Button
     box-shadow: 0 0 0 0.2rem hsla(0, 91%, 66%,0.5);
   }
 
-  hsl(0, 91%, 61%);
-  hsl(0, 91%, 66%);
-
-  hsl(0, 91%, 61%);
-  hsl(0, 91%, 66%);
-  hsla(0, 91%, 66%, 0.5);
-
-  hsl(0, 91%, 71%);
-  hsl(0, 91%, 71%);
-
-  hsl(0, 91%, 66%);
-  hsl(0, 91%, 61%);
-
-  hsla(0, 91%, 66%, 0.5);
-
 /*
 ============================================================================================
 ============================================================================================
@@ -990,7 +975,7 @@ Cover Page
 
 #coverPage {
     position: relative;
-    overflow: hidden;
+    overflow: hidden !important;
 }
 
 /*
